<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.simtechdata</groupId>
    <artifactId>WebPathCrawler</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>com.simtechdata.Main</mainClass>
        <javafx.version>21-ea+24</javafx.version>
        <maven-jar-plugin>3.3.0</maven-jar-plugin>
        <versions-maven-plugin>2.16.1</versions-maven-plugin>
        <javapackager>1.7.5</javapackager>
        <gluonfx-maven-plugin>1.0.21</gluonfx-maven-plugin>
        <javafx-maven-plugin>0.0.8</javafx-maven-plugin>
        <maven-surefire-plugin>3.2.2</maven-surefire-plugin>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.16.2</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.0</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.nativeimage</groupId>
            <artifactId>library-support</artifactId>
            <version>23.1.1</version>
        </dependency>
    </dependencies>


     <build>
        <plugins>
            <!--Maven Versions-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>display-dependency-updates</goal>
                            <goal>display-plugin-updates</goal>
                            <goal>property-updates-report</goal>
                            <goal>dependency-updates-report</goal>
                            <goal>plugin-updates-report</goal>
                            <goal>update-properties</goal>
                            <goal>use-latest-versions</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx-maven-plugin}</version>
                <configuration>
                    <graalvmHome>/Library/Java/JavaVirtualMachines/graalvm20/Contents/Home</graalvmHome>
                    <mainClass>${mainClass}</mainClass>
                    <nativeImageArgs>--add-exports=org.graalvm.compiler.options/com.oracle.svm.core=ALL-UNNAMED</nativeImageArgs>
                    <nativeImageArgs>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core=ALL-UNNAMED</nativeImageArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin}</version>
                <configuration>
                    <classpathDependencyExcludes>org.graalvm.nativeimage</classpathDependencyExcludes>
                    <argLine>-ea</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven-plugin}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
<!--
                <configuration>
                    <includes>
                        <file>Users/michael/.m2/repository/org/openjfx/javafx-controls/21.0.1/javafx-controls-21.0.1-mac.jar</file>
                    </includes>
                    <archive>
                        <manifest>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
-->
            </plugin>
        </plugins>
    </build>

</project>
